--- a/Epicode_S3_L1_BackEnd/Epicode_S3_L1_BackEnd.csproj
+++ b/Epicode_S3_L1_BackEnd/Epicode_S3_L1_BackEnd.csproj
@@ -190,6 +190,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Veicolo.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
